# ECE496_ClangPlugins

./: README.md
clang-plugins-demo/lib/library-catch/: LibraryCatchAction.cpp
clang-plugins-demo/lib/recursive-function/: CMakeLists.txt  RecursiveFunctionsAction.cpp  RecursiveFunctionsAction.h
clang-plugins-demo/tools/: CMakeLists.txt
clang-plugins/lib/: CMakeLists.txt
clang-plugins/lib/global-variable/: CMakeLists.txt  GlobalVariableAction.cpp  GlobalVariableAction.h
clang-plugins/lib/library-catch/: CMakeLists.txt  LibraryCatchAction.cpp  LibraryCatchAction.h
clang-plugins/lib/recursive-function/: RecursiveFunctionsAction.cpp  RecursiveFunctionsAction.h
clang-plugins/lib/streamchecker/: SimpleStreamChecker.cpp
